--- a/app/views/shows/_form.html.erb
+++ b/app/views/shows/_form.html.erb
@@ -23,11 +23,11 @@
     <%= error_span(@show[:name]) %>
   </div>
   <div class="control-group">
-    <%= f.label :location, :class => 'control-label' %>
+    <%= f.label :venue, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :location, :class => 'form-control' %>
+      <%= f.text_field :venue, :class => 'form-control' %>
     </div>
-    <%= error_span(@show[:location]) %>
+    <%= error_span(@show[:venue]) %>
   </div>
   <div class="control-group">
     <%= f.label :description, :class => 'control-label' %>
